--- a/app/views/shared/_navbarDS.html.erb
+++ b/app/views/shared/_navbarDS.html.erb
@@ -65,8 +65,8 @@
                     <span class="br-divider horizontal mx-half mx-sm-1">
                     <div class="menu-folder"><a class="menu-item text-decoration-none" href="javascript: void(0)"><span class="icon"><i class="fas fa-folder" aria-hidden="true"></i></span><span class="content">Requerimentos</span></a>
                       <ul>
-                        <li><%= link_to requeriments_path, class: "menu-item" do %><span class="icon"><i class="fas fa-flask" aria-hidden="true"></i></span><span class="content">Adicionar Requerimento</span><% end %></li>
-                        <li><%= link_to "#", class: "menu-item" do %><span class="icon"><i class="fas fa-hourglass-half" aria-hidden="true"></i></span><span class="content">#</span><% end %></li>
+                        <li><%= link_to new_requeriment_path, class: "menu-item" do %><span class="icon"><i class="fas fa-flask" aria-hidden="true"></i></span><span class="content">Adicionar Requerimento</span><% end %></li>
+                        <li><%= link_to requeriments_path, class: "menu-item" do %><span class="icon"><i class="fas fa-hourglass-half" aria-hidden="true"></i></span><span class="content">Meus Requerimentos</span><% end %></li>
                         <li><%= link_to "#", class: "menu-item" do %><span class="icon"><i class="fas fa-check-square" aria-hidden="true"></i></span><span class="content">#</span><% end %></li>
                       </ul>
                     </div>
