--- a/app/views/shared/_navbarDS.html.erb
+++ b/app/views/shared/_navbarDS.html.erb
@@ -3,7 +3,7 @@
     <div class="header-top">
       <div class="header-logo">
         <%= link_to root_path do %>
-        <%= image_tag("") %></a><span class=" vertical mx-half mx-sm-1"></span>
+        <%= image_tag("easy-icon.png") %></a><span class=" vertical mx-half mx-sm-1"></span>
         <% end %>
       </div>
       <div class="header-actions">
@@ -54,7 +54,7 @@
               <div class="menu-container">
                 <div class="menu-panel">
                   <div class="menu-header">
-                    <div class="menu-title"><%= image_tag("") %><span>facilita de Verdade</span></div>
+                    <div class="menu-title"><%= image_tag("easy-icon.png") %><span>facilita de Verdade</span></div>
                     <div class="menu-close">
                       <button class="br-button circle" type="button" aria-label="Fechar o menu" data-dismiss="menu" id="close-menu"><i class="fas fa-times" aria-hidden="true"></i>
                       </button>
