--- a/app/assets/stylesheets/components/_menu.scss
+++ b/app/assets/stylesheets/components/_menu.scss
@@ -21,8 +21,13 @@
     justify-content: center;
     position: absolute;
     width: 100%;
+
     margin-top: 0.5em;
     z-index: 100;
+
+    > textarea.form-control {
+      height: 500px !important;
+    }
 
   }
 
