--- a/app/views/shared/_navbarDS.html.erb
+++ b/app/views/shared/_navbarDS.html.erb
@@ -18,15 +18,17 @@
 
       <div> <!-- Botão Entrar / Meu cadastro -->
         <% if user_signed_in? %>
-          <div class="avatar dropdown-toggle br-button sign-in small" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Meu cadastro</div>
+          <div class="avatar dropdown-toggle br-button sign-in small" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ><i class="fas fa-user" aria-hidden="true"> </i>Meu cadastro</div>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <% if current_user.admin? %>
-            <%= link_to "Blazer", blazer_path, class: "dropdown-item" %>
+            <%= link_to "Blazer", "#", class: "dropdown-item" %>
           <% end %>
             <%= link_to "Sair", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         <% else %>
-          <%= link_to "Entrar", new_user_session_path, class: "br-button sign-in small" %>
+          <%= link_to new_user_session_path, class: "br-button sign-in small" do %>
+            <i class="fas fa-user" aria-hidden="true"> </i>Entrar
+          <% end %>
         <% end %>
       </div>
 
