--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,7 @@
 .banner-sec {
-      box-shadow: var(--header-shadow);
+      box-shadow: 0 1px 6px rgba(0, 0, 0, 0.16);
 
-  h2 {
+  h3 {
   font-weight: bold;
   color: white;
   text-shadow: 3px 3px 5px rgba(0,0,0,0.4);
