--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= favicon_link_tag asset_path('easy-icon.ico') %>
+    <%= favicon_link_tag asset_path('easy-icon.png') %>
 
       <link
             rel="stylesheet"
