--- a/app/views/requeriments/index.html.erb
+++ b/app/views/requeriments/index.html.erb
@@ -1,11 +1,13 @@
   <div class="banner-sec bg-primary-darken-02 ">
-    <h2>Meus Requerimentos</h2>
+    <h3>Meus Requerimentos</h3>
   </div>
 
 <div class="container mt-2">
 
-  <div class="mb-2">
-    <%= link_to "Novo Requerimento", new_requeriment_path, class: "br-button primary mt-3 mt-sm-0 text-decoration-none" %>
+  <div class="row mb-2 justify-content-around">
+    <div class="">
+      <%= link_to "Novo Requerimento", new_requeriment_path, class: "br-button primary mt-3 mt-sm-0 text-decoration-none" %>
+    </div>
   </div>
 
   <div id="table">
